Disable compiler forking
This option seems to be a relic from when multiple compilers were needed to build the project. By not forking, not only does this decrease the build time, it also improves the error messages and logging from annotation processors.

Signed-off-by: Matt Sicker <mattsicker@apache.org>

--- a/pom.xml
+++ b/pom.xml
@@ -1136,7 +1136,7 @@
             <showWarnings>true</showWarnings>
             <verbose>false</verbose>
             <encoding>UTF-8</encoding>
-            <fork>true</fork>
+            <fork>false</fork>
             <meminitial>256</meminitial>
             <maxmem>1024</maxmem>
             <compilerArgs>
