[LOG4J2-3362] Adds a SmtpManager compatible with Jakarta EE 9
Since javax.mail and jakarta.mail use different package names, as single
SmtpAppender can use both through different managers.

Unfortunately the implementations com.sun.mail:javax.mail and
com.sun.mail:jakarta.mail use the same class names, so it is not
possible to test both implementations at the same time. A separate test
execution was configured for the tests using jakarta.* classes.

--- a/log4j-core/pom.xml
+++ b/log4j-core/pom.xml
@@ -102,6 +102,16 @@
     </dependency>
     <!-- Required for SMTPAppender -->
     <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>javax.mail-api</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>javax.activation-api</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>com.sun.mail</groupId>
       <artifactId>javax.mail</artifactId>
       <optional>true</optional>
