--- a/log4j-script/pom.xml
+++ b/log4j-script/pom.xml
@@ -21,7 +21,6 @@
     <artifactId>log4j</artifactId>
     <groupId>org.apache.logging.log4j</groupId>
     <version>3.0.0-SNAPSHOT</version>
-    <relativePath>../</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -125,7 +124,7 @@
         <configuration>
           <instructions>
             <Fragment-Host>org.apache.logging.log4j.core</Fragment-Host>
-            <Export-Package>org.apache.logging.log4j.jul</Export-Package>
+            <Export-Package>org.apache.logging.log4j.script.*</Export-Package>
           </instructions>
         </configuration>
       </plugin>
