--- a/log4j-1.2-api/pom.xml
+++ b/log4j-1.2-api/pom.xml
@@ -124,6 +124,10 @@
           <instructions>
             <Fragment-Host>org.apache.logging.log4j.core</Fragment-Host>
             <Export-Package>org.apache.log4j.*</Export-Package>
+            <Import-Package>
+              javax.jms;version="[1.1,2)";resolution:=optional,
+              *
+            </Import-Package>
           </instructions>
         </configuration>
       </plugin>
