--- a/pom.xml
+++ b/pom.xml
@@ -1726,6 +1726,7 @@
     <module>log4j-1.2-api</module>
     <module>log4j-slf4j-impl</module>
     <module>log4j-slf4j18-impl</module>
+    <module>log4j-slf4j20-impl</module>
     <module>log4j-to-slf4j</module>
     <module>log4j-to-jul</module>
     <module>log4j-jcl</module>
