Fix `log4j-api` Java 9 tests
Due to SUREFIRE-2073, the tests in `log4j-api-java9` are executed on the
classpath instead of the modulepath.

This can be fixed by compiling the tests themselves using Java 8, to
work around Surefire's limitation.

--- a/log4j-api-java9/pom.xml
+++ b/log4j-api-java9/pom.xml
@@ -36,33 +36,9 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.apache.maven</groupId>
-      <artifactId>maven-core</artifactId>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-toolchains-plugin</artifactId>
-        <version>3.0.0</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>toolchain</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <toolchains>
-            <jdk>
-              <version>[9, )</version>
-            </jdk>
-          </toolchains>
-        </configuration>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -73,7 +49,14 @@
             <goals>
               <goal>compile</goal>
             </goals>
+            <configuration>
+              <jdkToolchain>
+                <version>[9, )</version>
+              </jdkToolchain>
+              <release>9</release>
+            </configuration>
           </execution>
+          <!-- We explicitly compile tests using Java 8 to work around SUREFIRE-2073 -->
           <execution>
             <id>default-test-compile</id>
             <phase>test-compile</phase>
@@ -81,19 +64,31 @@
               <goal>testCompile</goal>
             </goals>
           </execution>
+          <!-- Of course the 'module-info.java' needs Java 9 -->
+          <execution>
+            <id>test-compile-module</id>
+            <phase>test-compile</phase>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+            <configuration>
+              <jdkToolchain>
+                <version>[9, )</version>
+              </jdkToolchain>
+              <release>9</release>
+              <compileSourceRoots>
+                <compileSourceRoot>${project.basedir}/src/test/java9</compileSourceRoot>
+              </compileSourceRoots>
+            </configuration>
+          </execution>
         </executions>
         <configuration>
-          <source>9</source>
-          <target>9</target>
-          <release>9</release>
           <proc>none</proc>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <!-- Do not upgrade until https://issues.apache.org/jira/browse/SUREFIRE-720 is fixed -->
-        <version>2.13</version>
         <executions>
           <execution>
             <id>test</id>
@@ -107,13 +102,9 @@
           <systemPropertyVariables>
             <java.awt.headless>true</java.awt.headless>
           </systemPropertyVariables>
-          <includes>
-            <include>**/Test*.java</include>
-            <include>**/*Test.java</include>
-          </includes>
-          <excludes>
-            <exclude>**/*FuncTest.java</exclude>
-          </excludes>
+          <jdkToolchain>
+            <version>[9, )</version>
+          </jdkToolchain>
         </configuration>
       </plugin>
       <plugin>
@@ -138,7 +129,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>${deploy.plugin.version}</version>
         <configuration>
           <skip>true</skip>
         </configuration>
@@ -146,7 +136,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>${site.plugin.version}</version>
         <configuration>
           <skip>true</skip>
           <skipDeploy>true</skipDeploy>
