--- a/log4j-jakarta-smtp/pom.xml
+++ b/log4j-jakarta-smtp/pom.xml
@@ -23,8 +23,8 @@
     <version>2.17.3-SNAPSHOT</version>
   </parent>
 
-  <artifactId>log4j-smtp</artifactId>
-  <name>Apache Log4j SMTP</name>
+  <artifactId>log4j-jakarta-smtp</artifactId>
+  <name>Apache Log4j Jakarta SMTP</name>
   <description>
     Apache Log4j Simple Mail Transfer Protocol (SMTP) Appender, version for Jakarta EE 9.
   </description>
