--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -31,5 +31,6 @@ jobs:
         run: |
           ./mvnw \
             --show-version --batch-mode --errors --no-transfer-progress \
+            --threads 1C \
             -DtrimStackTrace=false \
             -Dlog4j2.junit.fileCleanerSleepPeriodMillis=1000
