--- a/pom.xml
+++ b/pom.xml
@@ -1070,7 +1070,7 @@
     </dependencies>
   </dependencyManagement>
   <build>
-    <defaultGoal>clean verify</defaultGoal>
+    <defaultGoal>clean install</defaultGoal>
     <pluginManagement>
       <plugins>
         <plugin>
