--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,13 +141,13 @@ jobs:
         # `package install:install deploy:deploy` goal is needed to deploy without configuring the plugin in the POM.
         # For details see: https://maven.apache.org/plugins/maven-gpg-plugin/examples/deploy-signed-artifacts.html
         run: |
-          ./mvnw -pl -log4j-bom \
+          ./mvnw -pl '!log4j-bom' \
             --show-version --batch-mode --errors --no-transfer-progress \
             -Dgpg.skip=true \
             -DskipTests=true \
             --settings .github/workflows/maven-settings.xml \
             --global-toolchains ".github/workflows/maven-toolchains.xml" \
-            deploy
+            package install:install deploy:deploy
         env:
           NEXUS_USER: ${{ secrets.NEXUS_USER }}
           NEXUS_PW: ${{ secrets.NEXUS_PW }}
