--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -379,12 +379,12 @@
         </executions>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <excludedGroups>
-            org.apache.logging.log4j.categories.PerformanceTests,
-          </excludedGroups>
-
+          <systemPropertyVariables>
+            <log4j2.is.webapp>false</log4j2.is.webapp>
+          </systemPropertyVariables>
         </configuration>
       </plugin>
       <plugin>
