Move performance tests to `log4j-perf`
By moving the performance tests from `log4j-core` to `log4j-perf`, we
can drop the `log4j:log4j` dependency

--- a/log4j-perf/pom.xml
+++ b/log4j-perf/pom.xml
@@ -65,6 +65,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <type>test-jar</type>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-jpa</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -156,6 +162,10 @@
     <dependency>
       <groupId>co.elastic.logging</groupId>
       <artifactId>log4j2-ecs-layout</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hdrhistogram</groupId>
+      <artifactId>HdrHistogram</artifactId>
     </dependency>
   </dependencies>
 
