LOG4J2-3516 - Move perf tests to log4j-core-its

--- a/log4j-core-its/pom.xml
+++ b/log4j-core-its/pom.xml
@@ -176,6 +176,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!-- For Async tests -->
+    <dependency>
+      <groupId>org.hdrhistogram</groupId>
+      <artifactId>HdrHistogram</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
