Tag sleepy tests as such and migrate some to JUnit 5
Adds a `fast-test` Maven profile for log4j-core-tests to skip over the sleepy tests.

Relates to LOG4J2-2653.

Signed-off-by: Matt Sicker <mattsicker@apache.org>

--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -466,5 +466,20 @@
       </plugin>
     </plugins>
   </reporting>
+  <profiles>
+    <profile>
+      <id>fast-test</id>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <excludedGroups combine.self="override">sleepy</excludedGroups>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
 
