--- a/log4j-gctests/pom.xml
+++ b/log4j-gctests/pom.xml
@@ -21,6 +21,7 @@
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
     <version>3.0.0-SNAPSHOT</version>
+    <relativePath>../log4j-parent</relativePath>
   </parent>
   <artifactId>log4j-gctests</artifactId>
   <packaging>jar</packaging>
@@ -135,7 +136,6 @@
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core-test</artifactId>
       <scope>test</scope>
-      <version>${project.version}</version>
     </dependency>
     <!--  Apache Commons Compress -->
     <dependency>
