--- a/log4j-layout-jackson-json/pom.xml
+++ b/log4j-layout-jackson-json/pom.xml
@@ -13,6 +13,7 @@
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j</artifactId>
     <version>3.0.0-SNAPSHOT</version>
+    <relativePath>../log4j-parent</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -33,7 +34,6 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-layout-jackson</artifactId>
-      <version>${project.version}</version>
     </dependency>
     <!-- Test Dependencies -->
     <dependency>
