--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,3 +21,8 @@ updates:
   schedule:
     interval: daily
   open-pull-requests-limit: 50
+- directory: /
+  schedule:
+    interval: daily
+  package-ecosystem: github-actions
+  open-pull-requests-limit: 5
