--- a/log4j-api-test/pom.xml
+++ b/log4j-api-test/pom.xml
@@ -69,6 +69,10 @@
       <artifactId>junit-platform-commons</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.junit-pioneer</groupId>
+      <artifactId>junit-pioneer</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
     </dependency>
@@ -273,6 +277,7 @@
                   junit.jupiter.execution.parallel.mode.default = concurrent
                 </configurationParameters>
               </properties>
+              <runOrder>balanced</runOrder>
               <forkCount>1C</forkCount>
               <reuseForks>true</reuseForks>
             </configuration>
