--- a/log4j-core-test/pom.xml
+++ b/log4j-core-test/pom.xml
@@ -338,6 +338,7 @@
           <systemPropertyVariables>
             <log4j2.is.webapp>false</log4j2.is.webapp>
           </systemPropertyVariables>
+          <runOrder>random</runOrder>
         </configuration>
       </plugin>
       <plugin>
