Change the version to 9.4
Jetty 9.x is the last version that does not use SLF4J natively: cf.
[Jetty 9 documentation](https://www.eclipse.org/jetty/documentation/jetty-9/index.html#configuring-logging)
vs
[Jetty 10
documentation](https://www.eclipse.org/jetty/documentation/jetty-10/operations-guide/index.html#og-logging)

Given the EOL announcement eclipse/jetty.project#7958, this is the last
upgrade we need to perform.

--- a/pom.xml
+++ b/pom.xml
@@ -307,6 +307,8 @@
     <argLine>-Xms256m -Xmx1024m</argLine>
     <javaTargetVersion>1.8</javaTargetVersion>
     <module.name />
+    <!-- Dependency versions -->
+    <jetty.version>9.4.46.v20220331</jetty.version>
   </properties>
   <pluginRepositories>
     <pluginRepository>
@@ -1073,6 +1075,12 @@
         <artifactId>guava-testlib</artifactId>
         <version>31.1-jre</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-util</artifactId>
+        <version>${jetty.version}</version>
+        <scope>provided</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
