--- a/log4j-appserver/pom.xml
+++ b/log4j-appserver/pom.xml
@@ -53,6 +53,8 @@
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-util</artifactId>
+      <version>${jetty.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
