--- a/pom.xml
+++ b/pom.xml
@@ -307,7 +307,7 @@
     <argLine>-Xms256m -Xmx1024m</argLine>
     <javaTargetVersion>1.8</javaTargetVersion>
     <module.name />
-    <!-- Dependency versions -->
+    <!-- Used in `log4j-appserver`, so that it does not override `wiremock`'s deps-->
     <jetty.version>9.4.46.v20220331</jetty.version>
   </properties>
   <pluginRepositories>
@@ -1075,12 +1075,6 @@
         <artifactId>guava-testlib</artifactId>
         <version>31.1-jre</version>
         <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-util</artifactId>
-        <version>${jetty.version}</version>
-        <scope>provided</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
