--- a/log4j-core-java9/pom.xml
+++ b/log4j-core-java9/pom.xml
@@ -38,11 +38,6 @@
       <artifactId>log4j-api</artifactId>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-core</artifactId>
       <scope>test</scope>
@@ -89,11 +84,10 @@
           </execution>
         </executions>
       </plugin>
+      <!-- There are no test for now.
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <!-- Do not upgrade until https://issues.apache.org/jira/browse/SUREFIRE-720 is fixed -->
-        <version>3.0.0-M6</version>
         <executions>
           <execution>
             <id>test</id>
@@ -116,6 +110,7 @@
           </excludes>
         </configuration>
       </plugin>
+      -->
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <executions>
