--- a/log4j-jpl/pom.xml
+++ b/log4j-jpl/pom.xml
@@ -142,8 +142,8 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <!-- Do not upgrade until https://issues.apache.org/jira/browse/SUREFIRE-720 is fixed -->
-        <version>3.0.0-M6</version>
+        <!-- Do not upgrade until https://issues.apache.org/jira/browse/SUREFIRE-2073 is fixed -->
+        <version>2.13</version>
         <configuration>
           <excludes combine.self="override" />
         </configuration>
